[gd_scene load_steps=2 format=3 uid="uid://mla2uybpdk5c"]

[ext_resource type="Script" uid="uid://eir1vhr7su6c" path="res://levels/title_menu.gd" id="1_hbfvm"]

[node name="TitleMenu" type="Node2D"]
script = ExtResource("1_hbfvm")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = -0.0138889
anchor_top = -0.0246914
anchor_right = 0.5
anchor_bottom = 0.506173
offset_right = 592.0
offset_bottom = 336.0
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="StartButton" type="Button" parent="CanvasLayer"]
offset_left = 488.0
offset_top = 440.0
offset_right = 600.0
offset_bottom = 472.0
text = "Start Game"

[node name="ControlsButton" type="Button" parent="CanvasLayer"]
offset_left = 488.0
offset_top = 488.0
offset_right = 600.0
offset_bottom = 520.0
text = "Controls"

[node name="CreditsButton" type="Button" parent="CanvasLayer"]
offset_left = 488.0
offset_top = 536.0
offset_right = 600.0
offset_bottom = 568.0
text = "Credits"

[node name="DebugLevelButton" type="Button" parent="CanvasLayer"]
modulate = Color(1, 1, 0, 1)
offset_left = 680.0
offset_top = 440.0
offset_right = 792.0
offset_bottom = 472.0
text = "Debug Level"

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 664.0
offset_top = 408.0
offset_right = 808.0
offset_bottom = 431.0
text = "Try the test level"
horizontal_alignment = 1

[node name="ControlsLabel" type="RichTextLabel" parent="CanvasLayer"]
visible = false
offset_left = 264.0
offset_top = 448.0
offset_right = 376.0
offset_bottom = 576.0
bbcode_enabled = true
text = "[center]Controls[/center]
A = Left
D = Right
Space = Jump
Enter = Shoot
"

[connection signal="pressed" from="CanvasLayer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="CanvasLayer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="CanvasLayer/DebugLevelButton" to="." method="_on_debug_level_button_pressed"]
